--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<div class="Container">
 			<h1>HTML5 e CSS3</h1>
 			<h2>Você faz. Você vê. Você aprende.</h2>
+			<a href="https://www.youtube.com/watch?v=M2GjflypG6E&list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk&index=16&ab_channel=ProfessorJos%C3%A9deAssis" target="_blank" class="Botao">Saiba +</a>
 		</div>
 	</main>
 	<!-- Sobre -->
